--- a/week_1_intro/post_express/views/fruitPicker.html
+++ b/week_1_intro/post_express/views/fruitPicker.html
@@ -6,7 +6,7 @@
         <p>What is your favorite fruit?</p>
         {% for fruit in fruits %}
           <p>
-            <input type="radio" name="fruit" value="{{fruit}}"/>{{fruit}}
+            <input type="radio" name="fruta" value="{{fruit}}"/>{{fruit}}
           </p>
         {% endfor %}
         <input type="submit" value="Submit"/>
